# CPP_NOTEBOOK

./: .gitignore  README.md
CPP/: func.cpp  main.cpp
CPP/cpp_primer_pluse/: CMakeLists.txt  Makefile  STL_dqueue.cpp  STL_list.cpp  STL_set.cpp  STL_vector.cpp  c11_stl_vector.cpp  main.cpp  vect.cpp  vect.h
Opencv_CPP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cv_thread.h  frame_func.cpp  main.cpp
Opencv_CPP/Project1/: Project1.sln
Opencv_CPP/Project1/Project1/: CCam_capture.cpp  CCam_capture.h  Project1.vcxproj  Project1.vcxproj.filters  소스.cpp
Opencv_CPP/Project1/x64/Debug/: Project1.ilk
Opencv_CPP/Project1/x64/Release/: Project1.iobj  Project1.ipdb
QT_projet/: README.md  func.cpp
QT_projet/Image_analyze/: CBT_SettingForm.qml  IMG_AnalyzeForm.qml  Image_analyze.pro  RES_AvgForm.qml  ScopeView.qml  backend.cpp  backend.h  backend_imageanalyze.cpp  backend_slots.cpp  fileout.cpp  fileout.h  main.cpp  main.qml  main.qml.autosave  qml.qrc
QT_projet/build-csv_analy-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
QT_projet/build-csv_analy-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
QT_projet/build-file_read_test-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
QT_projet/build-opengl_projet-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_widget.cpp  ui_widget.h
QT_projet/build-untitled2-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_application.cpp  qrc_d.cpp  (+8 more)
report/: 120520y_dohan.c  matrix.txt
(+177 files in other folders)
